Almost done switch to records & Jackson